--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "6.14.5"
   },
   "scripts": {
-    "start": "node backend/index.js",
+    "start": "node backend/src/index.js",
     "heroku-postbuild": "npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "bongjoi",
