--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^9.1.0",
+    "koa-send": "^5.0.1",
+    "koa-static": "^5.0.0",
     "mongoose": "^5.9.25",
     "sanitize-html": "^1.27.2"
   },
