--- a/package.json
+++ b/package.json
@@ -12,5 +12,18 @@
     "heroku-postbuild": "npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "bongjoi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^9.1.0",
+    "koa-send": "^5.0.1",
+    "koa-static": "^5.0.0",
+    "mongoose": "^5.9.25",
+    "sanitize-html": "^1.27.2"
+  }
 }
